--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
   <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p
   <p>Click here if you ever are feeling friskey enough to join the <a href="http://marines.com/>marines/">marines</a>. Here's a picture Marines attached to a  <span class="largefont">TRACK</span> Company. You can see them exit the back of the tactical vehicle. A memory I've experienced too many times! Although this picture is old, and the gear and weapons are very outdated this picture makes me laugh.</p>
   <img src="img/track.jpg" alt="Marine track company." class="center">
-  <p>Here are some things I'm going to learn about coding: </p>
+  <p>Here are some projects I've worked on since begining coding: </p>
   <ul>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>JavaScript</li>
+    <li><a href="https://github.com/stormyweather0311/Hello-world">Hello World</a></li>
+    <li><a href="https://github.com/stormyweather0311/my-first-webpage.git">My first webpage</a></li>
   </ul>
 </body>
 </html>
