add more to my work.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
     <li>Lil Wayne</li>
   </ol>
   
-  <p> I think it's always worth mentioning I have many skills! I am certified combat Marksmenship Intructor, Combat Life Saver certifed,Squadleader and Tactical Small unit graduate. Ive been to so many courses and trained with a wide variety of forces from Navy SEALS to Royal Marines. My 4 years in the Marines I believe gives me a mental advantage over most because I've gone through some of the hardest challenges life has to offer. I know physically and mentally that less than 1% of the world has gone through my obstacles. <strong>Yet, I remain humble and eager to learn knowing I have much to learn and I am better than no one.</strong></p>
-  
-  <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p
+  <p> I think it's always worth mentioning I have many skills! I am certified <strong>combat Marksmenship Intructor, Combat Life Saver certifed,Squadleader and Tactical Small unit graduate</strong>. Ive been to so many courses and trained with a wide variety of forces from Navy SEALS to Royal Marines. My 4 years in the Marines I believe gives me a mental advantage over most because I've gone through some of the hardest challenges life has to offer. I know physically and mentally that less than 1% of the world has gone through my obstacles. <strong>Yet, I remain humble and eager to learn knowing I have much to learn and I am better than no one.</strong></p>
+
   <p>Click here if you ever are feeling friskey enough to join the <a href="http://marines.com/>marines/">marines</a>. Here's a picture Marines attached to a  <span class="largefont">TRACK</span> Company. You can see them exit the back of the tactical vehicle. A memory I've experienced too many times! Although this picture is old, and the gear and weapons are very outdated this picture makes me laugh.</p>
   <img src="img/track.jpg" alt="Marine track company." class="center">
   <p>Here are some projects I've worked on since begining coding: </p>
