--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <li><a href="https://github.com/stormyweather0311/Hello-world">Hello World</a></li>
     <li><a href="https://github.com/stormyweather0311/my-first-webpage.git">My first webpage</a></li>
     <p>Hello world was just my first glance into HTML. Baisc website helped my geet familiar with block elements!</p>
-    <p>My first webpage was also a very basic page but helped me understand spacing and indentation.</p>
+    <p>My first webpage was also a very basic HTML page but helped me understand spacing and indentation.</p>
   </ul>
 </body>
 </html>
